; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libucl/tests/extr_test_msgpack.c_ucl_test_boolean.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libucl/tests/extr_test_msgpack.c_ucl_test_boolean.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UCL_ARRAY = common dso_local global i32 0, align 4
@nelt = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @ucl_test_boolean to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ucl_test_boolean() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @UCL_ARRAY, align 4
  %5 = call i32* @ucl_object_typed_new(i32 %4)
  store i32* %5, i32** %1, align 8
  %6 = call i32 (...) @pcg32_random()
  %7 = load i32, i32* @nelt, align 4
  %8 = srem i32 %6, %7
  store i32 %8, i32* %2, align 4
  store i32 0, i32* %3, align 4
  br label %9

9:                                                ; preds = %19, %0
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* %2, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %22

13:                                               ; preds = %9
  %14 = load i32*, i32** %1, align 8
  %15 = call i32 (...) @pcg32_random()
  %16 = srem i32 %15, 2
  %17 = call i32 @ucl_object_frombool(i32 %16)
  %18 = call i32 @ucl_array_append(i32* %14, i32 %17)
  br label %19

19:                                               ; preds = %13
  %20 = load i32, i32* %3, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %3, align 4
  br label %9

22:                                               ; preds = %9
  %23 = load i32*, i32** %1, align 8
  ret i32* %23
}

declare dso_local i32* @ucl_object_typed_new(i32) #1

declare dso_local i32 @pcg32_random(...) #1

declare dso_local i32 @ucl_array_append(i32*, i32) #1

declare dso_local i32 @ucl_object_frombool(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
